--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <img class="logo" src="https://www.canva.com/design/DAFmLeUj2sk/huryX1cPYo7RwAjGEfxfDw/view?utm_content=DAFmLeUj2sk&utm_campaign=share_your_design&utm_medium=link&utm_source=shareyourdesignpanel">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
