--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Progate</title>
-  <link href=url(logo.png)>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://www.canva.com/design/DAFmLeUj2sk/huryX1cPYo7RwAjGEfxfDw/view?utm_content=DAFmLeUj2sk&utm_campaign=share_your_design&utm_medium=link&utm_source=shareyourdesignpanel">
+        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -23,7 +23,7 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO コード.<br>LEARN TO BE CREATIVE.</h1>
+      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
       <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
